@@ -16,7 +16,9 @@ opsi-winst/opsi-script (4.12.3.9) experimental; urgency=low
       * DosBatch, DosInAnIcon, ShellBatch, ShellInAnIcon
       * ExecWith, ExecPython
       * Files
-  * fix some of the last line problems at defined functions
+  * fix some of the last line problems at defined functions ; fixes #4378
+  * new stringlist function in osparser (producestringlist):
+     setValueByKey(<key str>, <value str>, <target list> [, <separator str (char)>]) : stringlist
 
 -- Detlef Oertel <d.oertel@uib.de>  Tue, 28 Jan 2020:15:00:00 +0200
 
